proj1/tests/other-tests/oskis-angels_tests/correct/type-var.py
class Heap of [$Item]:
    def __init__(self):
        return 0
    def push(self, item::$Item):
        return 1
