proj1/tests/other-tests/oskis-angels_tests/error/nested_class.py
class A:
    class B:
        def __init__(self):
            pass

    def __init__(self):
        pass
